--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,10 @@ jspm_packages
 .node_repl_history
 .vscode
 dist
-demo/vue.bundle.js
 demo/common.js
+demo/vue.bundle.js
 demo/vue/index.js
+demo/react.bundle.js
+demo/react/index.js
+demo/angular.bundle.js
+demo/angular/index.js
